Bug 167066 - CRASH in SfxTabDialogController::ResetHdl(weld::Button &) (framedialog)
Summary: CRASH in SfxTabDialogController::ResetHdl(weld::Button &) (framedialog)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-17 14:31 UTC by Xisco Faulí
Modified: 2025-07-12 16:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SfxTabDialogController::ResetHdl(weld::Button &)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-06-17 14:31:07 UTC
Steps to reproduce:
1. Clean the user profile
2. Open writer with GEN environment
3. Insert - Frame - Frame interactively
4. Rick click - Properties
5. Click on Reset

-> Crash

Reproduced in

Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 211c193b1c7391b4f1c1172214a90899de19b06a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-06-17 14:32:11 UTC
Regression introduced by:

commit d700acbcba68e8b56e22db53bfcdfeb4c5777b9c	[log]
author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Fri Apr 26 14:49:58 2024 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon May 06 09:13:04 2024 +0200
tree ee23798582fadb126c153d9158a4011d1858a4d7
parent 7ae84ed99b133cdb4c197ecb43e2454f90b0439a [diff]

tdf#99528 Use vertical tabs in Frame dialog
Comment 2 Commit Notification 2025-06-18 12:34:03 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eaa970c9b9d4d8e9e29e419791f7d0dceb7c4d8c

Resolves tdf#167066, relates tdf#165487 - Show first tab as fallback

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-18 13:53:25 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0d4280be21dbe203cb6254a35fd324c764dec63c

Resolves tdf#167066, relates tdf#165487 - Show first tab as fallback

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-18 13:54:31 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/75d4ce4bbddad97f2eee31026f66456e19fd789b

Resolves tdf#167066, relates tdf#165487 - Show first tab as fallback

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-11 15:25:00 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c714428ff1a178378dec03cc287ab86fc35ec5a

tdf#167066, relates tdf#165487 - Show first tab as fallback

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-07-12 16:44:38 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2869d6151683a55ba795fe244bb699673ccd7008

Revert "tdf#167066, relates tdf#165487 - Show first tab as fallback"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.