Resolves tdf#167066, relates tdf#165487 - Show first tab as fallback

If the dialog runs for the first time, the viewoptions
are empty and no tab would be active, crashing on Reset

Change-Id: Ib889c17c5ef5876aa9e6e258d999f7e566aff514
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186656
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins